[workspace]
members=[
    "start",
    "mylib",
    "anolib",
]
[package]
name = "RustByExamples"
version = "0.1.0"
authors = ["Bruce <BruceChar@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mylib={ path="./mylib" }
another={ path="src/another" }
# [[example]]
# name="hello"
# path="examples/hello/hello.rs"

# [workspace]
# members=[
#   "examples/*"
# ]